// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots renders correctly with children 1`] = `
<ul
  aria-activedescendant="undefined--1"
  aria-label="Menu"
  className="monday-style-menu dummy-class-name monday-style-menu--medium"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOver={[Function]}
  role="menu"
  tabIndex={0}
>
  <div
    className="monday-style-menu-title"
  >
    <label
      className="monday-style-menu-title__caption monday-style-menu-title__caption--bottom"
      id=""
    >
      my title
    </label>
  </div>
  <li
    aria-current={false}
    className="monday-style-menu-item"
    id="undefined-1"
    onClick={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <div
      className="monday-style-menu-item__title"
    >
      item 1
    </div>
    
    <div
      className="monday-style-menu-item__popover"
      style={
        Object {
          "left": "0",
          "position": "absolute",
          "top": "0",
          "visibility": "hidden",
        }
      }
    />
  </li>
  <li
    aria-current={false}
    className="monday-style-menu-item"
    id="undefined-2"
    onClick={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <div
      className="monday-style-menu-item__title"
    >
      item 2
    </div>
    
    <div
      className="monday-style-menu-item__popover"
      style={
        Object {
          "left": "0",
          "position": "absolute",
          "top": "0",
          "visibility": "hidden",
        }
      }
    />
  </li>
</ul>
`;

exports[`Snapshots renders correctly with custom class name 1`] = `
<ul
  aria-activedescendant="undefined--1"
  aria-label="Menu"
  className="monday-style-menu dummy-class-name monday-style-menu--medium"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOver={[Function]}
  role="menu"
  tabIndex={0}
/>
`;

exports[`Snapshots renders correctly with empty props 1`] = `
<ul
  aria-activedescendant="undefined--1"
  aria-label="Menu"
  className="monday-style-menu monday-style-menu--medium"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOver={[Function]}
  role="menu"
  tabIndex={0}
/>
`;
